--- a/gs-serving-web-content-main/initial/pom.xml
+++ b/gs-serving-web-content-main/initial/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository practice 2 -->
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>serving-web-content-initial</artifactId>
